# xai-shap-dashboard

./: .gitignore  README.md  bank_marketing.csv  datasets.py  heart_disease.csv  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: config.yaml
data/sample/: generate_samples.py
docs/: README.md
examples/: README.md  basic_usage.py  dashboard_example.py  fairness_example.py  pipeline_example.py
notebooks/: 01_quick_start.ipynb  02_shap_deep_dive.ipynb  README.md
src/: __init__.py
src/analysis/: __init__.py  counterfactual.py  error_analyzer.py  insight_generator.py  model_comparator.py  stability.py
src/core/: __init__.py  config_manager.py  framework.py  pipeline.py
src/dashboard/: __init__.py  app.py  components.py  state.py
src/data_processing/: __init__.py  bias_detector.py  data_quality.py  processor.py  transformers.py
src/evaluation/: __init__.py  fairness.py  metrics.py
src/explainers/: __init__.py  explanation_types.py  shap_explainer.py
src/models/: __init__.py  base_model.py  neural_network_model.py  random_forest_model.py  trainer.py  xgboost_model.py
src/utils/: __init__.py  cloud_training.py  helpers.py  reporting.py
src/visualization/: __init__.py  interactive.py  metrics_viz.py  plots.py  themes.py
tests/: README.md  conftest.py  test_evaluation.py  test_explainer.py  test_framework.py
